fix data source in connectionString

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "MyConnection": "Data Source=DESKTOP-BILQNBN\\NEW!;Initial Catalog=Calendar_Core_DB;User ID=sa;Password=salam;MultipleActiveResultSets=true;TrustServerCertificate=True; Trusted_Connection=true"
+    "MyConnection": "Data Source=ALIREZAS-WINDOW;Initial Catalog=Calendar_Core_DB;User ID=sa;Password=salam;MultipleActiveResultSets=true;TrustServerCertificate=True; Trusted_Connection=true"
   }
 }
